gforge (3.1-3+) unstable; urgency=low

  * [Christian] corrected stupid chmod error in user_dump_update.pl
    that was making unwritable htdocs dir to the group
  * [Christian] added support for cvsweb.php a cvsweb wrapper 
    updated to last cvsweb version

 -- Christian Bayle <bayle@debian.org>  Sun,  9 Nov 2003 20:16:48 +0100

gforge (3.1-3) unstable; urgency=low

  * [Roland] Added a lock feature to update-user-group-cvs.sh.  That adds
    a dependency on lockfile-progs.
  * [Roland] Fixed install-postfix.sh for gforge-mta-postfix's
    deconfiguration process (closes: #218637).

 -- Roland Mas <lolando@debian.org>  Tue,  4 Nov 2003 23:16:44 +0100

gforge (3.1-2) unstable; urgency=low

  * [Roland] Fixed install-db.sh and its "cannot create user : already
    exists" bug.

 -- Roland Mas <lolando@debian.org>  Mon, 27 Oct 2003 10:35:09 +0100

gforge (3.1-1) unstable; urgency=low

  * New upstream release.
  * [Roland] Patch #558 from Patrick McFarland to fix hardwiring problem
    in install-db.sh.
  * [Roland] Patch #561 from Patrick McFarland to fix "access to *'" bug
    in install-ldap.sh.
  * [Roland] Fixed a few occurences of SF in the Debconf templates (Gforge
    bug #555).

 -- Roland Mas <lolando@debian.org>  Sun, 26 Oct 2003 23:01:26 +0100

gforge (3.0-9) unstable; urgency=low

  * [Roland] New CVS snapshot, including fix for a bug that prevented
    e-mails to be sent with the passwords for new mailing-lists at their
    creation.

 -- Roland Mas <lolando@debian.org>  Fri, 10 Oct 2003 12:23:09 +0200

gforge (3.0-8) unstable; urgency=low

  * [Roland] Fixed redirection URL for Mailman.
  * [Roland] Made the create-vhosts cronjob silent.
  * [Roland] Removed duplicate colon from PHP script, it belongs in the
    *.tab files (closes: #212213).
  * [Roland] Fixed -request alias for Mailman (closes: #213160).
  * [Roland] Index page is now customisable (in
    /etc/gforge/custom/index_std.php) (and the default version differs